tests/invalid/types_4.exp
types_4.p:13: Type error: 'string' and 'int' are not the same
